httpserver/httpserver-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpserver
  labels:
    name: httpserver
