httpserver/httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver-deployment1
  namespace: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: tangyouhua/httpserver:v1.0
        ports:
        - containerPort: 80
        name: httpserver
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo 'start' from the httpServer postStart handler > /usr/share/message"]
          preStop:
              exec:
                command: ["/bin/sh", "-c", "echo 'end' from the httpServer preStop handler > /usr/share/message"]
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
      tolerations:
      - key: "key"
        operator: "Equal"
        value: "nginx"
        effect: "NoSchedule"
